--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p class="idea-3">Text wish to sab karte hai<br>Aur ham to firbhi Btech wale hai<br>
                 <strong>NAMITA JI</strong></p>
             <p class="idea-4">Aisa kuchh to banta tha and Also</p>
-            <p class="idea-5">You are thoda sa Special <span>;)</span></p>
+            <p class="idea-5">You are thoda sa ...... <span>;)</span></p>
             <p class="idea-6">
                     <span> 3 </span>
                     <span> 2 </span>
